# celery-asyncio

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  tag.yml
celery/: __init__.py  __main__.py  _state.py  beat.py  bootsteps.py  canvas.py  exceptions.py  local.py  platforms.py  result.py  schedules.py  signals.py  states.py
celery/app/: __init__.py  amqp.py  annotations.py  autoretry.py  backends.py  base.py  builtins.py  control.py  defaults.py  events.py  log.py  registry.py  routes.py  task.py  trace.py  utils.py
celery/apps/: beat.py  multi.py  worker.py
celery/backends/: __init__.py  arangodb.py  asynchronous.py  azureblockblob.py  base.py  cache.py  cassandra.py  consul.py  cosmosdbsql.py  couchbase.py  dynamodb.py  elasticsearch.py  filesystem.py  gcs.py  mongodb.py  redis.py  rpc.py  valkey_redis.py
celery/backends/database/: __init__.py  models.py  session.py
celery/concurrency/: __init__.py  aio.py  base.py  thread.py
celery/contrib/: abortable.py  migrate.py  pytest.py  rdb.py  sphinx.py
celery/contrib/django/: __init__.py  backend.py  task.py
celery/contrib/testing/: app.py  manager.py  mocks.py  tasks.py  worker.py
celery/events/: __init__.py  cursesmon.py  dispatcher.py  dumper.py  event.py  receiver.py  snapshot.py  state.py
celery/fixups/: __init__.py  django.py
celery/loaders/: __init__.py  app.py  base.py  default.py
celery/security/: __init__.py  certificate.py  key.py  serialization.py  utils.py
celery/utils/: __init__.py  abstract.py  annotations.py  collections.py  debug.py  deprecated.py  functional.py  graph.py  imports.py  iso8601.py  log.py  nodenames.py  objects.py  promises.py  saferepr.py  scheduling.py  serialization.py  sysinfo.py  term.py  text.py  threads.py  time.py  timer2.py
celery/utils/dispatch/: __init__.py  signal.py
celery/utils/static/: __init__.py
celery/worker/: __init__.py  autoscale.py  components.py  control.py  heartbeat.py  loops.py  pidbox.py  request.py  state.py  strategy.py  worker.py
celery/worker/consumer/: __init__.py  connection.py  consumer.py  control.py  delayed_delivery.py  events.py  gossip.py  heart.py  mingle.py  tasks.py
docs/: index.md
docs/getting-started/: installation.md  migration.md  quickstart.md
docs/reference/: app.md  canvas.md  changelog.md  result.md  schedules.md  signals.md  states.md  task.md
docs/user-guide/: architecture.md  async-tasks.md  configuration.md  django.md
examples/benchmark/: .gitignore  INVESTIGATIONS.md  README.md  RESULTS.md  _render_results.py  celeryapp.py  compare.py  docker-compose.yml  profile_run.py  run_all.py  runner.py  setup_venvs.sh  tasks.py  workload.py
examples/django_tasks/: README.md  manage.py  run.py
examples/django_tasks/proj/: celery.py  settings.py  tasks.py  urls.py
examples/rabbitmq/: README.md  celeryapp.py  docker-compose.yml  run.py  tasks.py
examples/simple/: README.md  celeryapp.py  docker-compose.yml  load.py  run.py  tasks.py
main/: 404.html  index.html  objects.inv  sitemap.xml
main/getting-started/installation/: index.html
main/getting-started/migration/: index.html
main/getting-started/quickstart/: index.html
main/reference/app/: index.html
main/reference/canvas/: index.html
main/reference/changelog/: index.html
main/reference/result/: index.html
main/reference/schedules/: index.html
main/reference/signals/: index.html
main/reference/states/: index.html
main/reference/task/: index.html
main/search/: search_index.json
main/user-guide/architecture/: index.html
main/user-guide/async-tasks/: index.html
main/user-guide/configuration/: index.html
main/user-guide/django/: index.html
t/unit/: conftest.py
t/unit/app/: test_amqp.py  test_backends.py  test_builtins.py  test_control.py
t/unit/backends/: test_asynchronous.py  test_rpc.py
t/unit/concurrency/: test_concurrency.py
t/unit/contrib/: test_pytest.py  test_worker.py
t/unit/events/: test_events.py
t/unit/tasks/: test_chord.py
t/unit/worker/: test_autoscale.py  test_bootsteps.py  test_components.py  test_consumer.py
tests/: skip.py
tests/benchmarks/: bench_worker.py
tests/integration/: conftest.py  tasks.py  test_backend.py  test_canvas.py  test_inspect.py  test_loader.py  test_mem_leak_in_exception_handling.py  test_native_delayed_delivery_binding.py  test_quorum_queue_qos_cluster_simulation.py  test_rabbitmq_chord_unlock_routing.py  test_rabbitmq_default_queue_type_fallback.py  test_security.py  test_serialization.py  test_tasks.py  test_worker.py
tests/smoke/: conftest.py  tasks.py
tests/smoke/operations/: task_termination.py  worker_kill.py  worker_restart.py
tests/smoke/tests/: test_canvas.py  test_consumer.py  test_control.py  test_signals.py  test_tasks.py  test_thread_safe.py  test_worker.py
tests/smoke/workers/: alt.py  other.py
tests/unit/: conftest.py  test_loops.py
tests/unit/app/: test_amqp.py  test_app.py  test_backends.py  test_beat.py  test_builtins.py  test_control.py  test_exceptions.py  test_loaders.py  test_log.py  test_preload_cli.py  test_routes.py  test_schedules.py  test_trace.py
tests/unit/apps/: test_multi.py
tests/unit/backends/: test_arangodb.py  test_asynchronous.py  test_azureblockblob.py  test_base.py  test_cache.py  test_cassandra.py  test_consul.py  test_cosmosdbsql.py  test_couchdb.py  test_database.py  test_dynamodb.py  test_elasticsearch.py  test_filesystem.py  test_gcs.py  test_mongodb.py  test_redis.py  test_rpc.py  test_s3.py  test_valkey_redis.py
tests/unit/concurrency/: test_concurrency.py  test_pool.py
tests/unit/contrib/: test_migrate.py  test_pytest.py  test_rdb.py  test_worker.py
tests/unit/events/: test_cursesmon.py  test_dumper.py  test_events.py  test_state.py
tests/unit/fixups/: test_django.py
tests/unit/security/: test_certificate.py  test_key.py  test_security.py  test_serialization.py
tests/unit/tasks/: test_canvas.py  test_chord.py  test_result.py  test_stamping.py  test_tasks.py  test_trace.py
tests/unit/utils/: test_annotations.py  (+19 more)
(+24 files in other folders)
