[project]
name = "celery-asyncio"
version = "6.0.0a2"
description = "Distributed Task Queue with native asyncio support"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.14"
keywords = [
  "actors",
  "amqp",
  "async",
  "asyncio",
  "distributed",
  "job",
  "python",
  "queue",
  "rabbitmq",
  "redis",
  "task",
  "valkey",
]
authors = [{ name = "Oliver Haas", email = "ohaas@e1plus.de" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Framework :: Celery",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Object Brokering",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed",
]
dependencies = [
  "kombu-asyncio==6.0.0a2",
  "asgiref>=3.5.0",
  "click>=8.1.2,<9.0",
  "click-didyoumean>=0.3.0",
  "click-repl>=0.2.0",
  "click-plugins>=1.1.1",
  "python-dateutil>=2.8.2",
  "tzlocal",
]

[project.urls]
Homepage = "https://oliverhaas.github.io/celery-asyncio/"
Documentation = "https://oliverhaas.github.io/celery-asyncio/"
Repository = "https://github.com/oliverhaas/celery-asyncio"
Source = "https://github.com/oliverhaas/celery-asyncio"

[project.scripts]
celery = "celery.__main__:main"

[project.optional-dependencies]
# Serializers
msgpack = ["msgpack"]
yaml = ["PyYAML>=3.10"]

# Transports and Backends
valkey = ["kombu-asyncio[valkey]"]
redis = ["kombu-asyncio[redis]"]

# Testing
tblib = ["tblib>=1.3.0"]
pytest = ["pytest>=8.0.0"]

# Django
django = ["Django>=6.0"]

# Monitoring
flower = ["flower>=2.0", "tornado>=5,<7", "prometheus-client>=0.8", "humanize", "pytz"]

# Compression
brotli = ["brotli>=1.0.0"]
zstd = ["zstandard>=0.22.0"]

[dependency-groups]
dev = [
  "mypy==1.19.1",
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "pytest-mock==3.15.1",
  "pytest-timeout==2.4.0",
  "pytest-xdist==3.8.0",
  "redis==7.1.0",
  "ruff==0.15.4",
  "valkey==6.1.1",
  "ty==0.0.19",
]
docs = ["mkdocs==1.6.1", "mkdocs-material==9.7.3", "mike==2.1.3"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["celery"]

[tool.hatch.build.targets.sdist]
include = ["celery", "LICENSE", "README.md"]

[tool.uv]
# flower depends on "celery" (PyPI), but celery-asyncio provides the celery
# Python module. This override prevents uv from pulling in upstream celery.
override-dependencies = ["celery ; python_version < '0'"]

[tool.uv.sources]
kombu-asyncio = { path = "../kombu", editable = true }

[tool.ruff]
line-length = 120
target-version = "py314"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A",        # Builtin shadowing — celery uses type, format, id as params
  "ANN",      # Type annotations — will add incrementally (separate task)
  "ARG",      # Unused arguments — signal handlers, overrides, API compat
  "ASYNC109", # timeout param is task TTL, not asyncio.timeout
  "ASYNC110", # asyncio.Event suggestion — not always appropriate
  "B007",     # Unused loop control variable — sometimes intentional
  "B018",     # Useless expression — intentional in some celery patterns
  "B020",     # Loop variable overrides iterator
  "B024",     # Abstract base class without abstract method
  "B026",     # Star-arg unpacking after keyword arg
  "B027",     # Empty method without abstract decorator
  "B904",     # Raise from — will fix incrementally
  "BLE001",   # Blind except: needed for task error handling
  "C901",     # Complex structure: some task functions are inherently complex
  "COM812",   # Conflicts with ruff-format
  "COM818",   # Trailing comma on bare tuple
  "D",        # Docstrings — will add incrementally
  "DTZ",      # Datetime timezone — celery uses naive datetimes throughout
  "E402",     # Module-level import not at top — lazy imports
  "E501",     # Line length handled by config
  "E741",     # Ambiguous variable name — l, O, I used in celery
  "EM",       # Exception strings inline are fine
  "ERA001",   # Commented-out code — keeping for reference during rewrite
  "EXE",      # Shebang — examples have shebangs for convenience
  "FBT",      # Boolean params match task APIs (ignore_result, bind, etc.)
  "FIX",      # TODO/FIXME/XXX comments — allowed during development
  "G",        # Logging format — celery uses % formatting in logging
  "INP001",   # Implicit namespace package — examples are standalone scripts
  "ISC002",   # Implicit string concatenation
  "N",        # Naming conventions: celery has its own patterns
  "PERF",     # Performance suggestions — readability over micro-optimization
  "PGH003",   # Blanket type-ignore
  "PGH004",   # Blanket noqa
  "PLC0205",  # __slots__ style
  "PLC0415",  # Dynamic imports for optional dependencies
  "PLE0704",  # Misplaced bare raise
  "PLR0206",  # Property with parameters
  "PLR0911",  # Too many return statements
  "PLR0912",  # Too many branches: complex task routing logic
  "PLR0913",  # Too many args — task APIs need many options
  "PLR0915",  # Too many statements — complex functions
  "PLR1704",  # Redefining argument from local — context manager patterns
  "PLR1714",  # Consider merging comparisons
  "PLR2004",  # Magic values — task-specific constants
  "PLW0127",  # Self-assigning variable — protocol v1 destructuring
  "PLW0603",  # Global statement: needed for module-level state
  "PLW1508",  # Invalid envvar default
  "PLW1641",  # eq without hash
  "PLW2901",  # Redefining loop variable
  "PTH",      # Pathlib — celery uses os.path extensively
  "PYI024",   # collections.namedtuple: existing patterns
  "PYI034",   # Non-self return type: __aenter__ patterns
  "PYI036",   # Bad exit annotation: __aexit__ patterns
  "RET503",   # Missing explicit return
  "RET504",   # Unnecessary variable before return
  "RET505",   # Superfluous else return — style preference
  "RSE102",   # Unnecessary parentheses on raise
  "RUF002",   # Ambiguous unicode in docstrings
  "RUF003",   # Ambiguous unicode
  "RUF005",   # Tuple concatenation is clearer
  "RUF006",   # asyncio.create_task without reference
  "RUF012",   # Mutable class defaults: intentional for celery state
  "RUF013",   # Implicit Optional
  "RUF015",   # Readability over micro-optimization
  "RUF022",   # __all__ not sorted
  "RUF046",   # Unnecessary cast
  "RUF059",   # Unused unpacked variable
  "S",        # Security — celery needs pickle, subprocess, exec, etc.
  "SIM",      # Simplify — style preference, readability varies
  "SLF001",   # Private member access needed for internals
  "SLOT000",  # No __slots__ in str subclass
  "T201",     # Print statements — for debugging during rewrite
  "TC",       # Typing-only imports: style preference
  "TD",       # TODO comments — allowed during development
  "TID252",   # Relative imports
  "TRY",      # tryceratops — style preference throughout
  "UP007",    # Non-PEP 604 annotation
  "UP031",    # Printf-style formatting — keep for consistency
  "UP041",    # Timeout error alias
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN",     # Type annotations not required in tests
  "ARG",     # Unused arguments common in fixtures
  "ASYNC110", # Async busy wait — test patterns
  "B",       # Bugbear — relaxed in tests
  "COM818",  # Trailing comma on bare tuple
  "DTZ",     # Datetime timezone — tests use naive datetimes
  "E721",    # Type comparison — test assertions
  "E742",    # Ambiguous class name — test mocks
  "INP001",  # Implicit namespace package
  "PERF",    # Performance — not critical in tests
  "PLC0206", # Dict index missing items
  "PLR",     # Pylint refactor — relaxed in tests
  "PLW0129", # Assert on string literal
  "PT",      # Pytest style — preference
  "RUF043",  # Pytest raises ambiguous pattern
  "S",       # Security — tests are trusted code
  "SIM117",  # Multiple with statements
  "SLOT",    # No slots in subclass
  "TRY",     # tryceratops — relaxed in tests
  "UP045",   # Non-PEP 604 Optional
]

[tool.mypy]
python_version = "3.14"
pretty = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = false

[[tool.mypy.overrides]]
module = "kombu.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "click_repl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "click_didyoumean.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asgiref.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dateutil.*"
ignore_missing_imports = true

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
addopts = "--cov=celery --cov-report=term-missing --cov-report=xml --no-cov-on-fail"
testpaths = ["tests/unit"]
python_classes = "test_*"
xfail_strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "sleepdeprived_patched_module",
  "masked_modules",
  "patched_environ",
  "patched_module",
  "flaky",
  "timeout",
  "amqp",
]

[tool.coverage.run]
branch = true
source = ["celery"]
omit = ["*/__init__.py"]

[tool.coverage.report]
precision = 2
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "except ImportError:",
  "raise NotImplementedError",
]
